<resources>
    <string name="app_name">GitHub User List</string>
    <string name="user_name">Username</string>
    <string name="location">Lokasi</string>
    <string name="repository">Repositori</string>
    <string name="txRepo">%s Repository</string>
    <string name="tx">%1$s (%2$s)</string>
    <string name="txCompany">Work at %s</string>

    <string name="tvName">Surename</string>
    <string name="txtUsername">Username</string>
    <string name="lblRepo">Repository</string>
    <string name="lblFollower">Follower</string>
    <string name="lblFollowing">Following</string>
    <string name="expNum">1234</string>
    <string name="txtLocation">Location</string>
    <string name="txtCompany">Company</string>
    <string name="search">Search</string>
    <string name="search_hint">Username</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="profilePicture">Foto Profil</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Tema Gelap</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_button">Favorite Button</string>
</resources>