<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/search"
            android:title="@string/search"
            android:icon = "@drawable/ic_baseline_search_24"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />
        <item android:id="@+id/menu_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            app:showAsAction="collapseActionView|always"/>
        <item android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="collapseActionView|always"/>
    </group>
</menu>