<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity" >

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profilePicture" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextDetail.Title"
        android:text="@string/tvName"
        app:layout_constraintEnd_toEndOf="@id/iv_avatar"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextDetail.SubTitle"
        android:paddingBottom="10dp"
        android:text="@string/txtUsername"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/TextDetail.SubTitle"
        android:text="@string/txtLocation"
        app:layout_constraintEnd_toEndOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tvCompany"
        style="@style/TextDetail.SubTitle"
        android:paddingBottom="5dp"
        android:text="@string/txtCompany"
        app:layout_constraintEnd_toEndOf="@id/tvLocation"
        app:layout_constraintStart_toStartOf="@id/tvLocation"
        app:layout_constraintTop_toBottomOf="@id/tvLocation" />

    <TextView
        android:id="@+id/labelRepository"
        style="@style/TextDetail.Label"
        android:text="@string/lblRepo"
        app:layout_constraintBottom_toBottomOf="@id/labelFollower"
        app:layout_constraintEnd_toStartOf="@id/labelFollower"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelFollower"
        style="@style/TextDetail.Label"
        android:paddingTop="10dp"
        android:text="@string/lblFollower"
        app:layout_constraintEnd_toEndOf="@id/tvCompany"
        app:layout_constraintStart_toStartOf="@id/tvCompany"
        app:layout_constraintTop_toBottomOf="@id/tvCompany" />

    <TextView
        android:id="@+id/labelFollowing"
        style="@style/TextDetail.Label"
        android:text="@string/lblFollowing"
        app:layout_constraintBottom_toBottomOf="@id/labelFollower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelFollower" />

    <TextView
        android:id="@+id/tvRepository"
        style="@style/TextDetail.Number"
        android:text="@string/expNum"
        app:layout_constraintEnd_toEndOf="@id/labelRepository"
        app:layout_constraintStart_toStartOf="@id/labelRepository"
        app:layout_constraintTop_toBottomOf="@id/labelRepository" />

    <TextView
        android:id="@+id/tvFollower"
        style="@style/TextDetail.Number"
        android:text="@string/expNum"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/labelFollower"
        app:layout_constraintStart_toStartOf="@id/labelFollower"
        app:layout_constraintTop_toBottomOf="@id/labelFollower" />

    <TextView
        android:id="@+id/tvFollowing"
        style="@style/TextDetail.Number"
        android:text="@string/expNum"
        app:layout_constraintEnd_toEndOf="@id/labelFollowing"
        app:layout_constraintStart_toStartOf="@id/labelFollowing"
        app:layout_constraintTop_toBottomOf="@id/labelFollowing" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFollower"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintLeft_toLeftOf="@id/tabs"
        app:layout_constraintRight_toRightOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/favorite_button"
        android:src="@drawable/ic_baseline_favorite_24"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>