<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/profilePicture" />

            <TextView
                style="@style/TextList.Title"
                android:id="@+id/tv_item_name"
                android:layout_toEndOf="@id/img_item_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_item_photo"
                app:layout_constraintTop_toTopOf="@id/img_item_photo"
                tools:text="@string/user_name" />

            <TextView
                style="@style/TextList.Content"
                android:id="@+id/tv_item_location"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                app:layout_constraintStart_toEndOf="@id/img_item_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/location" />

            <TextView
                style="@style/TextList.Content"
                android:id="@+id/tv_item_repository"
                app:layout_constraintTop_toBottomOf="@id/tv_item_location"
                app:layout_constraintStart_toEndOf="@id/img_item_photo"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/repository" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>